--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,6 @@ dependencies = [
     "faiss-cpu>=1.11.0",
     "ipykernel>=6.29.5",
     "langchain>=0.3.25",
+    "langchain-chroma>=0.2.3",
     "langchain-community>=0.3.23",
 ]
